--- a/6.28.ipynb
+++ b/6.28.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3d7b2187",
+   "id": "fe65d24e",
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "42124312",
+   "id": "90c45083",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "761c0c4c",
+   "id": "0abb78d1",
    "metadata": {},
    "source": [
     "# total energy of $H_2O$and$CO_2$"
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f97e021a",
+   "id": "b7423b4a",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09f1dd29",
+   "id": "dae34fba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4d1eb46c",
+   "id": "8bc98814",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52015c28",
+   "id": "d2974fcb",
    "metadata": {},
    "source": [
     "## bonding energy1"
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a1b8e279",
+   "id": "fe29a107",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80991b61",
+   "id": "f8130ecf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e343e38",
+   "id": "413ab941",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7be2dac",
+   "id": "70b472ae",
    "metadata": {},
    "source": [
     "## bonding energy2"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4a177400",
+   "id": "0b072cb3",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5df1ee03",
+   "id": "7d8dfc00",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cadd1cc9",
+   "id": "5abccc5a",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "641644b3",
+   "id": "fc345f77",
    "metadata": {},
    "source": [
     "## bonding energy3"
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8cdb5859",
+   "id": "0bae4c86",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "607ec4c7",
+   "id": "0bbc971f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0a24a82e",
+   "id": "c16ac2cc",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6659395c",
+   "id": "a62450b8",
    "metadata": {},
    "source": [
     "## bonding energy4"
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "59e3fadf",
+   "id": "d715d70f",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4543778c",
+   "id": "07cb5e23",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4aadda82",
+   "id": "9a2fbcb7",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2ca69af",
+   "id": "55f4fad3",
    "metadata": {},
    "source": [
     "# opt energy1"
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4e52b45b",
+   "id": "3d2a4429",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a95d33",
+   "id": "e593b186",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b696a097",
+   "id": "d9606e08",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d31a6b6",
+   "id": "b8e31668",
    "metadata": {},
    "source": [
     "# opt energy2"
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5f43c302",
+   "id": "18d3a506",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e5f0819",
+   "id": "878bf721",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "efc93e02",
+   "id": "7d9a04fd",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54414436",
+   "id": "8a126fd7",
    "metadata": {},
    "source": [
     "# opt energy3"
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "28d8486e",
+   "id": "d78817b0",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d64ecfb",
+   "id": "89fb6324",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2b6c1428",
+   "id": "22648858",
    "metadata": {
     "scrolled": true
    },
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e5ecd61",
+   "id": "71005e2e",
    "metadata": {},
    "source": [
     "# QST2 energy1"
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1755514d",
+   "id": "2c4498d6",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a77fbf0",
+   "id": "cfcddd26",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0a7893aa",
+   "id": "a30f2905",
    "metadata": {},
    "outputs": [
     {
@@ -594,16 +594,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41d821d0",
+   "id": "a4067e22",
    "metadata": {},
    "source": [
-    "# QST energy3"
+    "# QST2 energy3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "563bef75",
+   "id": "f21e6c69",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42aa32a6",
+   "id": "2559b9df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa211e86",
+   "id": "018ddfcb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90f26521",
+   "id": "db010975",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38da4b4",
+   "id": "2b81cacd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -654,47 +654,161 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff81118",
+   "id": "8918b191",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "58a9458f",
+   "metadata": {},
+   "source": [
+    "# QST2 product1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e3871e24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " SCF Done:  E(UB3LYP) =  -113.788813267     A.U. after   17 cycles\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "contentQSTCOH1product=open(\"C:\\Calculation\\DFT,opt=tight 6-31G(d,p)\\DFT,opt=tight 6-31G(d,p)QST2CO(1)H(1)\\DFT,opt=tight 6-31G(d,p)QST2CO(1)H(1)1product.out\",\"r\");\n",
+    "last_line=None;\n",
+    "for line in contentQSTCOH1product:\n",
+    "    if \"SCF Done\" in line:\n",
+    "        last_line=line;\n",
+    "print(last_line)\n",
+    "contentQSTCOH1product.close();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f60c4bdc",
+   "id": "f1630ff6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "85614d6f",
+   "metadata": {},
+   "source": [
+    "# QST2 product1 energy\n",
+    "## generated energy=opt energy1-product1 energy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "27f444e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.021185224000006997\n"
+     ]
+    }
+   ],
+   "source": [
+    "E_gen1=113.809998491-113.788813267\n",
+    "print(E_gen1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce79062c",
+   "id": "8199f29b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "2753f37d",
+   "metadata": {},
+   "source": [
+    "# QST2 product3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "557be049",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " SCF Done:  E(UB3LYP) =  -113.772927055     A.U. after   15 cycles\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "contentQSTCOH3product=open(\"C:\\Calculation\\DFT,opt=tight 6-31G(d,p)\\DFT,opt=tight 6-31G(d,p)QST2CO(1)H(1)\\DFT,opt=tight 6-31G(d,p)QST2CO(1)H(1)3product.out\",\"r\");\n",
+    "last_line=None;\n",
+    "for line in contentQSTCOH3product:\n",
+    "    if \"SCF Done\" in line:\n",
+    "        last_line=line;\n",
+    "print(last_line)\n",
+    "contentQSTCOH3product.close();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd0fbee",
+   "id": "aea4588a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18814d7c",
+   "cell_type": "markdown",
+   "id": "bc5eaf1b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# QST2 product3 energy\n",
+    "## generated energy=opt energy3-product3 energy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "dc5c090d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03688213300000598\n"
+     ]
+    }
+   ],
+   "source": [
+    "E_gen3=113.809809188-113.772927055\n",
+    "print(E_gen3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abdf9743",
+   "id": "6b3e58ec",
    "metadata": {},
    "outputs": [],
    "source": []
