--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "1990a580",
    "metadata": {
     "scrolled": true
@@ -227,30 +227,52 @@
      "output_type": "stream",
      "text": [
       "['./H/temp_B3LYP_3-21G.log', './H/temp_B3LYP_6-311G.log', './H/temp_B3LYP_6-31G(d,p).log', './H/temp_B3LYP_6-31G.log', './H/temp_B3LYP_cc-PVDZ.log', './H/temp_B3LYP_cc-PVQZ.log', './H/temp_B3LYP_cc-PVTZ.log', './H/temp_CCSD_cc-PVDZ.log', './H/temp_CCSD_cc-PVQZ.log', './H/temp_CCSD_cc-PVTZ.log', './H/temp_MP2_cc-PVDZ.log', './H/temp_MP2_cc-PVQZ.log', './H/temp_MP2_cc-PVTZ.log']\n",
+      "\n",
+      "\n",
       "H total energy: [-0.49731144 -0.50215593 -0.50027278 -0.50027278 -0.50125794 -0.50234605\n",
       " -0.50215634 -0.4992784  -0.49994557 -0.49980981 -0.4992784  -0.49994557\n",
       " -0.49980981]\n",
+      "************************************************************************************************************************\n",
+      "\n",
+      "\n",
       "\n",
       "\n",
       "['./CO/temp_B3LYP_3-21G.log', './CO/temp_B3LYP_6-311G.log', './CO/temp_B3LYP_6-31G(d,p).log', './CO/temp_B3LYP_6-31G.log', './CO/temp_B3LYP_cc-PVDZ.log', './CO/temp_B3LYP_cc-PVQZ.log', './CO/temp_B3LYP_cc-PVTZ.log', './CO/temp_CCSD_cc-PVDZ.log', './CO/temp_CCSD_cc-PVQZ.log', './CO/temp_CCSD_cc-PVTZ.log', './CO/temp_MP2_cc-PVDZ.log', './CO/temp_MP2_cc-PVQZ.log', './CO/temp_MP2_cc-PVTZ.log']\n",
+      "\n",
+      "\n",
       "CO total energy: [-112.67193646 -113.29681214 -113.30945314 -113.25917709 -113.32136848\n",
       " -113.36676404 -113.3572531  -113.04396944 -113.16941013 -113.13854856\n",
       " -113.03680666 -113.16989859 -113.13565163]\n",
+      "************************************************************************************************************************\n",
+      "\n",
+      "\n",
       "\n",
       "\n",
       "['./optCO(1)H(1)/temp_B3LYP_3-21G.log', './optCO(1)H(1)/temp_B3LYP_6-311G.log', './optCO(1)H(1)/temp_B3LYP_6-31G(d,p).log', './optCO(1)H(1)/temp_B3LYP_6-31G.log', './optCO(1)H(1)/temp_B3LYP_cc-PVDZ.log', './optCO(1)H(1)/temp_B3LYP_cc-PVQZ.log', './optCO(1)H(1)/temp_B3LYP_cc-PVTZ.log', './optCO(1)H(1)/temp_CCSD_cc-PVDZ.log', './optCO(1)H(1)/temp_CCSD_cc-PVQZ.log', './optCO(1)H(1)/temp_CCSD_cc-PVTZ.log', './optCO(1)H(1)/temp_MP2_cc-PVDZ.log', './optCO(1)H(1)/temp_MP2_cc-PVQZ.log', './optCO(1)H(1)/temp_MP2_cc-PVTZ.log']\n",
+      "\n",
+      "\n",
       "opt(CO;H) total energy: [-113.21246136 -113.79898598 -113.80999849 -113.75973269 -113.82275062\n",
       " -113.86910992 -113.85941243 -113.54328254 -113.66943018 -113.63841077\n",
       " -113.53611959 -113.66990597 -113.63551169]\n",
+      "************************************************************************************************************************\n",
+      "\n",
+      "\n",
       "\n",
       "\n",
       "['./QST2CO(1)H(1)/temp_B3LYP_3-21G.log', './QST2CO(1)H(1)/temp_B3LYP_6-311G.log', './QST2CO(1)H(1)/temp_B3LYP_6-31G(d,p).log', './QST2CO(1)H(1)/temp_B3LYP_6-31G.log', './QST2CO(1)H(1)/temp_B3LYP_cc-PVDZ.log', './QST2CO(1)H(1)/temp_B3LYP_cc-PVQZ.log', './QST2CO(1)H(1)/temp_B3LYP_cc-PVTZ.log', './QST2CO(1)H(1)/temp_CCSD_cc-PVDZ.log', './QST2CO(1)H(1)/temp_CCSD_cc-PVQZ.log', './QST2CO(1)H(1)/temp_CCSD_cc-PVTZ.log', './QST2CO(1)H(1)/temp_MP2_cc-PVDZ.log', './QST2CO(1)H(1)/temp_MP2_cc-PVQZ.log', './QST2CO(1)H(1)/temp_MP2_cc-PVTZ.log']\n",
+      "\n",
+      "\n",
       "resultqst2 total energy: [-113.16991504 -113.79782942 -113.80963335 -113.75947838 -113.82204061\n",
       " -113.86800001 -113.85836357 -113.53451084 -113.6630621  -113.6315344\n",
       " -113.52396028 -113.66025193 -113.62530618]\n",
+      "************************************************************************************************************************\n",
+      "\n",
+      "\n",
       "\n",
       "\n",
       "['./CHO/temp_B3LYP_3-21G.log', './CHO/temp_B3LYP_6-311G.log', './CHO/temp_B3LYP_6-31G(d,p).log', './CHO/temp_B3LYP_6-31G.log', './CHO/temp_B3LYP_cc-PVDZ.log', './CHO/temp_B3LYP_cc-PVQZ.log', './CHO/temp_B3LYP_cc-PVTZ.log', './CHO/temp_CCSD_cc-PVDZ.log', './CHO/temp_CCSD_cc-PVQZ.log', './CHO/temp_CCSD_cc-PVTZ.log', './CHO/temp_MP2_cc-PVDZ.log', './CHO/temp_MP2_cc-PVQZ.log', './CHO/temp_MP2_cc-PVTZ.log']\n",
+      "\n",
+      "\n",
       "resultCHO total energy: [-113.2124613  -113.84226957 -113.85182991 -113.80732894 -113.86064872\n",
       " -113.90839973 -113.89888821 -113.56570799 -113.69919301 -113.6670928\n",
       " -113.55444092 -113.69593062 -113.66026899]\n"
@@ -283,29 +305,42 @@
     "routeCHO=fileroute(dirCHO,routeCHO);\n",
     "\n",
     "print(routeH)\n",
+    "print(\"\\n\");\n",
     "resultH=returnvaluelist(routeH,resultH);\n",
     "print(\"H total energy:\",resultH);\n",
+    "print(\"*\"*120);\n",
+    "print(\"\\n\");\n",
     "print(\"\\n\");\n",
     "\n",
     "print(routeCO)\n",
+    "print(\"\\n\");\n",
     "resultCO=returnvaluelist(routeCO,resultCO);\n",
     "resultCO[10:13]*=1000\n",
     "print(\"CO total energy:\",resultCO);\n",
+    "print(\"*\"*120);\n",
+    "print(\"\\n\");\n",
     "print(\"\\n\");\n",
     "\n",
     "print(routeopt)\n",
+    "print(\"\\n\");\n",
     "resultopt=returnvaluelist(routeopt,resultopt);\n",
     "resultopt[10:13]*=1000\n",
     "print(\"opt(CO;H) total energy:\",resultopt);\n",
+    "print(\"*\"*120);\n",
+    "print(\"\\n\");\n",
     "print(\"\\n\");\n",
     "\n",
     "print(routeqst2)\n",
+    "print(\"\\n\");\n",
     "resultqst2=returnvaluelist(routeqst2,resultqst2);\n",
     "resultqst2[10:13]*=1000\n",
     "print(\"resultqst2 total energy:\",resultqst2);\n",
+    "print(\"*\"*120);\n",
+    "print(\"\\n\");\n",
     "print(\"\\n\");\n",
     "\n",
     "print(routeCHO)\n",
+    "print(\"\\n\");\n",
     "resultCHO=returnvaluelist(routeCHO,resultCHO);\n",
     "resultCHO[10:13]*=1000\n",
     "print(\"resultCHO total energy:\",resultCHO);"
@@ -313,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "76f5e24a",
    "metadata": {},
    "outputs": [
