--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -5046,8 +5046,176 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "8b9588fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_key(input_string):\n",
+    "    # 找到第二个 '/'\n",
+    "    second_slash_index = input_string.find('/', input_string.find('/') + 1)\n",
+    "    if second_slash_index == -1:\n",
+    "        return None  # 如果没有找到第二个 '/'\n",
+    "    \n",
+    "    # 找到 'temp_' 后的位置\n",
+    "    temp_index = input_string.find('temp_', second_slash_index)\n",
+    "    if temp_index == -1:\n",
+    "        return None  # 如果没有找到 'temp_'\n",
+    "    \n",
+    "    # 找到 '.log' 前的位置\n",
+    "    log_index = input_string.find('.log', temp_index)\n",
+    "    if log_index == -1:\n",
+    "        return None  # 如果没有找到 '.log'\n",
+    "    \n",
+    "    # 提取目标部分\n",
+    "    result = input_string[temp_index + len('temp_'):log_index]\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# # 测试函数\n",
+    "# input_string = \"./optCO(1)H(1)/temp_B97D_6-31G.log ./QST2CO(1)H(1)/temp_B97D_6-31G.log\"\n",
+    "# result = extract_key(input_string)\n",
+    "# print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71f2472a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "14c8173c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keylist=[]\n",
+    "valuelist=[]\n",
+    "for i in range(len(routeopt)):\n",
+    "    keylist.append(extract_key(routeopt[i]))\n",
+    "    valuelist.append(qst2energy[i])\n",
+    "# wB97XD_6-311++G\n",
+    "# 4.107561589890955"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "88f29a3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ce8ce5ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dataframe(keylist, valuelist):\n",
+    "    # 创建 DataFrame\n",
+    "    df = pd.DataFrame({\n",
+    "        'Key': keylist,\n",
+    "        'Value': valuelist\n",
+    "    })\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3a1df53b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      Key     Value\n",
+      "0     APFD_6-31++G(2d,2p)  1.279675\n",
+      "1       APFD_6-31++G(d,p)  1.473972\n",
+      "2            APFD_6-31++G  1.375350\n",
+      "3    APFD_6-311++G(2d,2p)  1.267603\n",
+      "4      APFD_6-311++G(d,p)  1.348509\n",
+      "..                    ...       ...\n",
+      "871     X3LYP_6-311G(d,p)  0.660438\n",
+      "872          X3LYP_6-311G  0.683686\n",
+      "873    X3LYP_6-31G(2d,2p)  0.212032\n",
+      "874      X3LYP_6-31G(d,p)  0.199730\n",
+      "875           X3LYP_6-31G  0.132647\n",
+      "\n",
+      "[876 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 调用函数创建 DataFrame\n",
+    "result_df = create_dataframe(keylist, valuelist)\n",
+    "\n",
+    "# 打印结果\n",
+    "print(result_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e251168e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value for key 'wB97XD_6-311++G(d,p)' is: 4.056203743299206\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 假设 result_df 是你的 DataFrame\n",
+    "# 使用 loc 方法进行查询\n",
+    "key_to_find = \"wB97XD_6-311++G(d,p)\"\n",
+    "result_value = result_df.loc[result_df['Key'] == key_to_find, 'Value'].values\n",
+    "\n",
+    "if len(result_value) > 0:\n",
+    "    print(f\"The value for key '{key_to_find}' is: {result_value[0]}\")\n",
+    "else:\n",
+    "    print(f\"No value found for key '{key_to_find}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2e7cd66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b947bd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e6d131",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df6347cf",
    "metadata": {},
    "outputs": [],
    "source": []
